--- a/examples.html
+++ b/examples.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>sc.chinaz.com</title>
+  <title>Yuqing Li</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -25,11 +25,11 @@
     </header>
     <div id="site_content">
       <ul class="slideshow">
-        <li class="show"><img width="950" height="350" src="images/1.jpg"  /></li>
+        <li class="show"><img width="950" height="350" src="images/1.jpg" /></li>
         <li><img width="950" height="350" src="images/2.jpg" /></li>
         <li><img width="950" height="350" src="images/3.jpg" /></li>
       </ul>
-    
+     
       <div id="content">
         <h2>PROJECTS AND RESEARCH EXPERIENCE</h2>
         <h3>Image Coloring System Based on Deep Learning <i>(Jan 2019 - Present)</i></h3>
@@ -140,5 +140,3 @@
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
 </body>
 </html>
-
-
