--- a/page.html
+++ b/page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>sc.chinaz.com</title>
+  <title>Yuqing Li</title>
   <meta name="description" content="website description" />
   <meta name="keywords" content="website keywords, website keywords" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -20,28 +20,21 @@
                 <li class="current"><a href="index.html">home</a></li>
                 <li><a href="examples.html">experience</a></li>
                 <li><a href="page.html">honours </a></li>
-
-
               </ul>
           </nav>
         </header>
     <div id="site_content">
-      <ul class="slideshow">
-        <li class="show"></li><img width="950" height="350" src="images/1.jpg" /></li>
-        <li><img width="950" height="350" src="images/2.jpg" /></li>
-        <li><img width="950" height="350" src="images/3.jpg" /></li>
-      </ul>
-
-      </div>
+ <img width="950" height="350" src="images/1.jpg" />
+   </div>
       <div id="content">
         <h2>Selected Awards</h2>
           <ul type="disc">
           <li>
-              Nation Scholarship <i>(Sep 2019)</i></li>
+              National Scholarship <i>(Sep 2019)</i></li>
           <li>
               First prize in College Students Internet& innovation and Entrepreneurship Competition, Shaanxi <i>(Jul 2019)</i></li>
         <li>
-            First Prize in Chinese Undergraduate Computer Design Contest,China <i>(Jul 2019)</i>
+            First Prize in Chinese Undergraduate Computer Design Contest, China <i>(Jul 2019)</i>
         </li>
         <li>
             First Prize of Shaanxi province in National College Students Mathematical Modeling Contest <i>(Sep 2018)</i>
@@ -59,8 +52,6 @@
         Huang, M.; Tsuen,Y.; LI, Y.;Lu,W.; Chen, M., Image Coloring System Based on Deep Learning, Chinese Invention Patent, Application Number: CN201910234202.5 </p>
       </div>
     </div>
-    
-  </div>
   
   <footer>
         <p>&copy; Yuqing Li 2019 </p>
