--- a/examples.html
+++ b/examples.html
@@ -39,7 +39,7 @@
             Searched relevant documents of the project and produced more than 90,000 Data sets for the Chinese market(the 1960s--1980s), restoring the texture of the old domestic films.
         </li>
         <li>
-            Designed a model based on the GANS, through data learning, achieved the purpose of coloring pictures in different scene accurately.     
+            Designed a model based on the GAN, through data learning, achieved the purpose of coloring pictures in different scene accurately.     
         </li>
       </ul>
       </p>
@@ -48,32 +48,22 @@
       <p><i>Advised by Guangzhong Yang, Professor, School of The Hamlyn Centre, Imperial College London, England<br /></i>
       <ul type="disc">
       <li>
-          Utilized the mechanism of self-perceived coordinates, directly obtained the position information of the robot arm based on computer vision and machine learning, which reduced the commissioning cost of the arm.
+        Utilized the mechanism of self-perceived coordinates to compensate errors, obtained the position information of the robot arm with QRCode.
       </li>
       <li>
-          Applied point cloud map to achieve coordinate data visualization, solved the problem in accurate value measurements, depending on the angle and length, truly realized the fully automatic operation.
+        Detected objects with pre-trained model on ImageNet, and matched point cloud map with RGB, acquired the position of objects in 3D space.
+      </li> 
+      <li>
+        For more fun,<a href="https://www.bilibili.com/video/av23465449?from=search&seid=7453736270169515118"> video-Alphafan  </a>
+      </li> 
     </ul>
-    </p>
-    
-    <h3>Heat Conduction of Heat-proof Clothing<i>(Sep 2018 - Nov 2018)</i></h3>
-      <p><i>leader, Instructed by Shuisheng Zhou, Professor, School of Mathematics and Statistics, Xidian University, China<br /></i>
-      <ul type="disc">
-      <li>
-          Designed the mathematical model of heat-proof clothing with the partial differential equation learned.
-      </li>
-      <li>
-          Applied Matlab to solve the main parameters of the heat conduction model and draw an image of heat transfer.
-       <li>
-          Achieved the relative errors of 5% and 6% on the thickness of general fire-proof clothing.
-        </li>
-      </ul>
     </p>
 
     <h3>A System for Clothing Management based Deep Learning<i>(May 2018 - Jun 2019)</i></h3>
     <p><i>Advised by Ning Lu, Assistant Professor, School of Electrical Engineering, Xidian University, China<br /></i>
     <ul type="disc">
     <li>
-        Developed an app based on CNN network for intelligent collocation, combining with the weather and user's emotion, which could assist individuals to match clothes.
+      Developed an app based on CNN network for intelligent collocation, combining with the weather and user's emotion, which could assist individuals to match clothes.
     </li>
     <li>
         Installed a microelectronic chip on the clothes to complete the collection of basic information such as the model number, material, and purchase time.
@@ -83,14 +73,14 @@
     </ul>
   </p>
 
-  <h3>A System for Clothing Management based Deep Learning<i>(May 2018 - Jun 2019)</i></h3>
+  <h3>Vision-based Automatic Driving Express Robot<i>(Apr 2017 - Aug 2018)</i></h3>
   <p><i>Instructed by ShuYuan Yang, Professor, School of Artificial Intelligence, Xidian University, China<br /></i>
   <ul type="disc">
   <li>
-      Modified the original algorithm(based on the identification of ORB feature points, with high accuracy and high efficiency).
-    </li>
+    Reappeared a method from NVIDIA to orientate automatically in local environment.
+  </li>
   <li>
-      Increased the map saving and loading functions, enables it more suitable for practical application scenarios.
+    Recognized the environment, loaded different maps to adapt, enables it more suitable for practical application scenarios.
     </li>
   </ul>
 </p>
